# rust-practice

./: .env.example  .gitignore  Cargo.toml  Readme.md  demo.ll  demo.rs  demo.s  env-manager.skill  rust-tester.skill  test2.txt
Notes/: RUST_LIFETIMES_1.md  RUST_PROJECT_STRUCTURE.md
env-manager/env-manager/: SKILL.md
env-manager/env-manager/references/: ENV_BEST_PRACTICES.md  ENV_CHEATSHEET.md
rust-tester/rust-tester/: SKILL.md
rust-tester/rust-tester/references/: TESTING_STRUCTURE.md
src/: main.rs
src/utils/: array.rs  checktypes.rs  file_handling.rs  mod.rs  test_closure.rs
