[package]
name = "rust-practice"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.228"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "env_examples"
path = "src/bin/env_examples.rs"

[[bin]]
name = "simple_env"
path = "src/bin/simple_env.rs"
